tests/fuse/full/concurrency/spawn_mutref_rejected.fuse
// EXPECTED ERROR:
// error: cannot capture mutref across spawn boundary
//   --> spawn_mutref_rejected.fuse:15:10

data class Counter(var value: Int)

fn bump(mutref counter: Counter) {
  counter.value = counter.value + 1
}

@entrypoint
fn main() {
  var counter = Counter(0)
  spawn {
    bump(mutref counter)
  }
}
